updated challenges